# binance-usdc-bot

./: .dockerignore  .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  ARCHITECTURE_DOCUMENTATION.md  AUDIT_SL_ANALYSIS.md  CHECKLIST_HARIAN.md  DASHBOARD.md  DEPLOY.md  Dockerfile  ENTRY_CONFLUENCE_GATE.md  ENTRY_PIPELINE.md  GEMINI_TRADER.md  IMPROVEMENT_PLAN.md  LOG_ACCESS.md  METHODOLOGY.md  MY_PROFIT_TODO.md  PLAN_OPERASIONAL.md  PROPOSAL_CLEANUP_TARGET.md  README.md  RELIABILITY.md  RESEARCH.md  RESEARCH_HANDOFF.md  RESEARCH_HYPOTHESES_PHASE4.md  RESEARCH_LOG.md  TODO.md  TODO1.md  TUJUAN.md  _review.py  _review2.py  ab_report.py  backtest.py  carry.py  ce_report.py  chart_ingest.py  check.py  check_hei.py  check_params.py  check_scalp.py  (+66 more)
bot/: _bnb_log.txt  _trace_bnb.py  ab.py  actual_old.txt  agent_full.html  agent_html.txt  agent_load.txt  agent_page_current.py  agent_page_full.html  agent_page_script.txt  agent_script.py  aggresearch.py  altdata.py  api_open_orders.txt  api_stats.txt  api_status_fn.txt  backtest.py  before_deltrade.txt  bt_close.txt  bt_open_at.txt  bt_open_method.txt  carry.py  ce_report.py  chartstore.py  close_trade.txt  combiner.py  config.py  cooldown.py  copilot.py  cycle_candidate.py  cycle_regime.py  dashboard.py  dataset.py  debug_snippet.txt  decision_log.py  ec_calibrate.py  engine.py  entry_confluence.py  entry_logic.txt  eventhub.py  (+73 more)
core/: Cargo.toml  README.md
core/src/: config.rs  exec.rs  ingest.rs  ipc.rs  main.rs  normalize.rs  risk.rs  types.rs
data/: risk_filter_panel.npz  sl_calibration.json  unlock_calendar.csv  (+1 more)
(+280 files in other folders)
