[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Hot-path core: WS ingestion, data normalize, risk gate, execution (Rust)"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeromq = "0.4"
anyhow = "1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
